# alexa-echo-hue

./: LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
src/echohue/: __init__.py  all.json  defaults.py  get-state.json  main.py
test/: test_main.py  test_server.py
