[metadata]
name = echohue
version = attr: echohue.__version__
author = mightytry
author_email = 
description = Philips Hue lamp emulation for Amazon Echo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mightytry/alexa-echo-hue
project_urls =
    Bug Tracker = https://github.com/mightytry/alexa-echo-hue/issues
    Docs = https://github.com/mightytry/alexa-echo-hue
    GitHub: repo = https://github.com/aio-libs/aiohttp
    GitHub: issues = https://github.com/aio-libs/aiohttp/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.11
package_dir = 
    = src
packages = find:
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.package_data]
* = *.json